infra/k8s/evaluation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-ingress
  namespace: evaluation
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
